starter-code/styles.css
:root {
  --color-background: #151515;
  --color-background-light: #242424;
  --color-accent: #4ee1a0;
  --color-primary: #ffffff;
  --color-primary-muted: #d9d9d9;
  --color-warning: #ff6f5b;
}

@font-face {
  font-family: "Space Grotesk";
  src: url("./assets/fonts/SpaceGrotesk-VariableFont_wght.ttf")
    format("truetype-variations");
  font-weight: 500 700;
  font-style: normal;
}

body {
  background-color: var(--color-background);
  color: var(--color-primary);
  margin: 0;
  padding: 0;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

header {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
  margin-top: 20px;
  position: absolute;
  width: 100%;
}

.some-links {
  display: flex;
  gap: 25.6px;
  align-items: center;
}

.some-links a {
  color: var(--color-primary);
}

.some-links a:hover {
  color: var(--color-accent);
}

.logo {
  line-height: 32px;
  font-family: "Space Grotesk", sans-serif;
  color: var(--color-primary);
  letter-spacing: -0.33px;
  font-weight: 700;
  font-size: 24px;
  user-select: none;
}

.background-details {
  display: flex;
  flex-direction: column;
  position: absolute;
  height: 100%;
  width: 100%;
  justify-content: space-between;
}

.rings-detail {
  position: relative;
  left: -342px;
  top: 132px;
  z-index: -20;
  width: 530px;
}

.circle-detail {
  position: relative;
  /* left: -265px; */
  z-index: 10;
  display: block;
  /* float: right; */
  /* right: 0; */
  right: -65px;
  max-width: 129px;
  align-self: flex-end;
}

.profile-picture {
  width: 100%;
  display: flex;
  justify-content: center;
  position: relative;
  top: 0;
  z-index: -10;
}

.profile-picture picture {
  width: 46.4%;
  min-width: 174px;
}

.profile-picture img {
  width: 100%;
}

.hero-details {
  padding: 0 16px;
}

h1 {
  line-height: 40px;
  font-family: "Space Grotesk", sans-serif;
  color: var(--color-primary);
  letter-spacing: -1.14px;
  font-weight: 700;
  font-size: 40px;
  text-align: center;
}

h1 > span {
  text-decoration: underline;
  text-underline-offset: 8px;
  text-decoration-color: var(--color-accent);
  text-decoration-thickness: 4px;
}

#hero-section {
  margin-bottom: 92px;
}

#hero-section p {
  text-align: center;
  line-height: 26px;
  font-family: "Space Grotesk", sans-serif;
  color: var(--color-primary-muted);
  font-weight: 500;
  font-size: 16px;
  margin-bottom: 24px;
}

#hero-section a {
  display: block;
  width: fit-content;
  margin: auto;
  text-decoration: underline;
  text-underline-offset: 16px;
  text-decoration-color: var(--color-accent);
  line-height: 26px;
  font-family: "Space Grotesk", sans-serif;
  color: var(--color-primary);
  font-weight: 700;
  font-size: 16px;
  text-transform: uppercase;
  letter-spacing: 2.29px;
  text-decoration-thickness: 2px;
}

#hero-section a:hover {
  color: var(--color-accent);
}

#skills-section {
  border-top: 1px solid var(--color-primary);
  border-bottom: 1px solid var(--color-primary);
  margin: 0 16px;
  padding-top: 40px;
}

#skills-section > p {
  text-align: center;
  line-height: 26px;
  font-family: "Space Grotesk", sans-serif;
  color: var(--color-primary-muted);
  font-weight: 500;
  font-size: 16px;
  margin-bottom: 24px;
}

#skills-section > p > span {
  display: block;
  line-height: 40px;
  font-family: "Space Grotesk", sans-serif;
  color: var(--color-primary);
  font-weight: 700;
  font-size: 32px;
  margin-bottom: 1px;
}

.rings-detail--skills-container {
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.rings-detail-skills {
  position: relative;
  left: 360px;
  top: -62px;
  z-index: -20;
  width: 530px;
  height: 0;
  overflow-y: visible;
}

#project-section {
  padding: 0 16px;
  margin-top: 40px;
}

.project-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#project-section h2 {
  font-family: "Space Grotesk", sans-serif;
  font-weight: 700;
  font-size: 40px;
  line-height: 40px;
  letter-spacing: -1.14px;
  color: var(--color-primary);
}
#project-section a {
  display: block;
  width: fit-content;
  text-decoration: underline;
  text-underline-offset: 16px;
  text-decoration-color: var(--color-accent);
  line-height: 26px;
  font-family: "Space Grotesk", sans-serif;
  color: var(--color-primary);
  font-weight: 700;
  font-size: 16px;
  text-transform: uppercase;
  letter-spacing: 2.29px;
  text-decoration-thickness: 2px;
}

#project-section a:hover {
  color: var(--color-accent);
}

#project-section img {
  width: 100%;
}

#project-section h3 {
  font-family: "Space Grotesk", sans-serif;
  font-weight: 700;
  font-size: 24px;
  line-height: 32px;
  letter-spacing: 0px;
  text-transform: uppercase;
  margin-bottom: 7px;
  color: var(--color-primary);
}

.project-tags {
  font-family: "Space Grotesk", sans-serif;
  font-weight: 500;
  font-size: 18px;
  line-height: 28px;
  letter-spacing: 0px;
  text-transform: uppercase;
  display: flex;
  gap: 18px;
  margin-top: 0;
  color: var(--color-primary-muted);
}

.project-links {
  display: flex;
  gap: 30px;
  margin-bottom: 48px;
}

#contact-section {
  padding: 60px 16px 100px 16px;
  background-color: var(--color-background-light);
  border-bottom: 1px solid var(--color-primary);
}

#contact-section h2 {
  font-family: "Space Grotesk", sans-serif;
  font-weight: 700;
  font-size: 40px;
  line-height: 40px;
  letter-spacing: -1.14px;
  text-align: center;
  margin-top: 0;
  margin-bottom: 20px;
}

#contact-section p {
  font-family: "Space Grotesk", sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 26px;
  letter-spacing: 0px;
  text-align: center;
  color: var(--color-primary-muted);
  margin-bottom: 50px;
}

#contact-name,
#contact-email,
#contact-message {
  all: unset;
  font-family: "Space Grotesk", sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 26px;
  letter-spacing: 0px;
  color: var(--color-primary-muted);
  border-bottom: 1px solid var(--color-primary);
  padding-bottom: 16px;
  padding-left: 24px;
  width: 100%;
  margin-bottom: 32px;
}

#contact-name:focus,
#contact-email:focus {
  border-color: var(--color-accent);
}

.submit-button-container {
  display: flex;
  align-content: flex-end;
  width: 100%;
}

input[type="submit"] {
  all: unset;
  text-decoration-color: var(--color-accent);
  line-height: 26px;
  font-family: "Space Grotesk", sans-serif;
  color: var(--color-primary);
  font-weight: 700;
  font-size: 16px;
  text-transform: uppercase;
  letter-spacing: 2.29px;
  text-decoration-thickness: 2px;
  cursor: pointer;
  border-bottom: 2px solid var(--color-accent);
  padding-bottom: 8px;
  float: right;
}

input[type="submit"]:hover {
  color: var(--color-accent);
}

.rings-detail-contact {
  position: relative;
  right: 360px;
  top: -136px;
  z-index: 10;
  width: 530px;
  height: 0;
  overflow-y: visible;
}

footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
  padding-top: 39px;
  padding-bottom: 60px;
  position: absolute;
  width: 100%;
  background-color: var(--color-background-light);
}

